--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,16 @@
 {
-  "dependencies": {
-    "express": "^4.18.1"
-  },
-  "name": "bug-tracker",
+  "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.18.1",
+    "mongoose": "^6.6.0"
+  }
 }
