--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,10 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/next-auth": "^3.15.0",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.2",
     "next": "12.2.5",
+    "next-auth": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.35.0",
@@ -30,9 +31,12 @@
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
+    "dotenv": "^16.0.2",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "prettier": "^2.7.1",
-    "typescript": "4.8.2"
+    "typescript": "4.8.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
