--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/next-auth": "^3.15.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "next": "12.2.5",
     "next-auth": "^4.12.0",
     "react": "18.2.0",
