--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.0"
+    "mongoose": "^6.6.0",
+    "typeorm": "^0.3.10"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
