--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "server",
+  "name": "bug-tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "Made by Kristoffer Gärling",
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "dev": "nodemon server"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kristoffer Gärling",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
