--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.18",
     "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
